logica pasada a enums